<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".abcd.FragmentC">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmentc"
        android:textSize="18sp"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/tvSomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/some_text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnMoveFragD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/move_fragment_d" />

    <Button
        android:id="@+id/btnMoveFragA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/move_fragment_a" />

</FrameLayout>